Update for caps rendering issues

--- a/index.html
+++ b/index.html
@@ -37,16 +37,19 @@ Proudly located in Plenty, Saskatchewan, Canada.
 
 When you need to come into the Office, we are located at :
 <br>
-<pre>
+<p>
 210 Railway Ave
 
 Plenty, SK
 
-S0L 2R0 <a href="https://goo.gl/maps/yvxWWHDoG6wTj2UQ9">
+S0L 2R0
+</p>
+
+<a href="https://goo.gl/maps/yvxWWHDoG6wTj2UQ9">
 <img src="Images/WeeseElectricGoogleMap.png" alt="Weese Electric Google Map" style="float:right;width:200px;height:200px;box-shadow: 2px 2px 2px 2px #000;margin: 5px;">
 </a>
 
-</pre>
+
 
 
 </ContactInfo>
