--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
+<header>
 <title>Weese Electric Ltd.</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="mystyle.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
+<link rel="icon" type="image/x-icon" href="/Images/favicon.ico">
 
+</header>
 <body>
 
 <H1>
@@ -44,6 +47,7 @@ Plenty, SK
 
 S0L 2R0
 </p>
+<BR><BR><BR><BR><BR><BR><BR><BR><BR>
 
 <a href="https://goo.gl/maps/yvxWWHDoG6wTj2UQ9">
 <img src="Images/WeeseElectricGoogleMap.png" alt="Weese Electric Google Map" style="float:right;width:200px;height:200px;box-shadow: 2px 2px 2px 2px #000;margin: 5px;">
