--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
 <H1>
-  <img src="Images/WeeseElectricHeader.png" style="width: 33%;float: left;image-border: ">
+  <img src="Images/WeeseElectricHeader.png" style="width: 33%;float: left;box-shadow: 0 0 8px 8px white inset;">
 </H1>
 
 <BR><BR><BR><BR><BR><BR><BR><BR><BR><BR><BR><BR><BR><BR><BR><BR><BR><BR><BR><BR><BR><BR><BR><BR><BR>
